Add animation and links to store items

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -27,7 +27,7 @@
 
                         <p class="description2">Знижка <span style="font-weight: 599; font-size:30px">до 25%</span> грн
                         </p>
-                        <button mat-raised-button class="banner-button" (click)="bannerButton1()">
+                        <button mat-raised-button class="banner-button" (click)="bannerButton2()">
                             Перейти до категорії
                         </button>
                     </div>
@@ -56,6 +56,12 @@
         </div>
     </div>
 </div>
+
+<div>
+
+</div>
+
+
 <div>
     <h5>this is some text</h5>
     <h5>this is some text</h5>
