--- a/src/app/pages/constructor/constructor.component.html
+++ b/src/app/pages/constructor/constructor.component.html
@@ -24,7 +24,7 @@
                 <div class="bouquet-list">
                     <h1 class="bouquet-list-title">Ваш Букет:</h1>
                     <div class="selected-products">
-
+                        <h1>sdaasdd</h1>
                     </div>
                     <div class="buttons-container">
                         <button class="left-button"><h1 class="button-text">< НАЗАД</h1></button>
