--- a/src/app/pages/constructor/constructor.component.css
+++ b/src/app/pages/constructor/constructor.component.css
@@ -109,7 +109,7 @@ button{
 
 .selected-products{
     width: 100%;
-    height: 400px;
+    height: fit-content;
     background-color: white;
 }
 
