--- a/src/app/pages/store/components/filters/filters.component.html
+++ b/src/app/pages/store/components/filters/filters.component.html
@@ -17,7 +17,11 @@
 
                 <mat-divider></mat-divider>
 
-              <app-products-type-filter></app-products-type-filter>
+              <app-products-type-filter (SelectedProductTypeChanged)="SelectedProductTypeChangeHandler($event)"></app-products-type-filter>
+
+                <mat-divider></mat-divider>
+
+              <app-products-appointment-filter (SelectedProductAppointmentsChanged)="SelectedProductAppointmentsChangeHandler($event)"></app-products-appointment-filter>
 
               </mat-accordion>
         </div>
