--- a/src/app/pages/constructor/constructor.component.css
+++ b/src/app/pages/constructor/constructor.component.css
@@ -8,7 +8,7 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    max-width: 1700px;
+    max-width: 1900px;
     height: fit-content;
     background-color:rgb(255, 255, 255);
 }
@@ -21,7 +21,7 @@
 }
 
 .constructor-navigation{
-    width: 70.01%;
+    width: 60.01%;
     height: 80px;
     position: absolute;
     right: 0;
@@ -39,15 +39,17 @@ h1{
     text-align: center;
 }
 
-.constructor-navigation-button{
+p{
+    height: 100px;
+    font-size: 16pt;
+    padding-top: 10%;
+}
+
+.constructor-navigation-button, .constructor-navigation-button-selected{
     height: 100%;
     width: 100%;
     border-bottom: 5px solid #d1d1d1;
     border-left: 2px solid #d1d1d1;
-}
-
-.constructor-navigation-button:focus {
-    border-bottom: 5px solid #ca6c6c;
 }
 
 .constructor-container{
@@ -59,7 +61,7 @@ h1{
 }
 
 .bouquet-list-container{
-    width: 30%;
+    width: 40%;
     height: 100%;
 }
 
@@ -99,8 +101,11 @@ button{
 }
 
 .button-text{
-    font-weight: 400;
+    font-weight: 600;
     font-size: 16pt;
+    margin-left: 3px;
+    margin-right: 3px;
+    color:  #FF99A5;
 }
 
 .right-button{
@@ -114,8 +119,9 @@ button{
 }
 
 .products-container{
-    width: 70%;
+    width: 60%;
     height: fit-content;
+    min-height: 800px;
     border-left: 1px solid #d1d1d1;
 
 }
@@ -129,8 +135,20 @@ button{
 }
 
 button:hover{
-   background-color: rgb(226, 226, 226);
+   background-color:#FF99A5;
 }
+
+button:hover .button-text{
+    color: white;
+ }
+
+.constructor-navigation-button:hover{
+    background-color: rgb(230, 230, 230);
+ }
+
+.constructor-navigation-button-selected{
+    border-bottom: 12px solid #FF8A8A ;
+ }
 
 @media screen and (max-width: 1350px) {
     
