--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,8 @@
+.maincontent {
+  margin-left: 7%;
+  margin-right: 7%;
+}
+
 .banner-swiper {
   width: 100%;
   height: 500px;
@@ -105,8 +110,6 @@
 .categories {
   margin-top: 70px;
   margin-bottom: 70px;
-  margin-left: 7%;
-  margin-right: 7%;
 }
 
 
@@ -115,8 +118,9 @@
   border-radius: 20px;
   width: 100%;
   height: 100%;
-  max-height: 50vh;
+  max-height: 45vh;
   object-fit: cover;
+  cursor: pointer;
 }
 
 .category-text {
@@ -127,4 +131,33 @@
   font-weight: 300;
   font-size: 50px;
   line-height: 0.9;
+}
+
+.popular {
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+
+.popular-swiper {
+  width: 100%;
+  padding: 25px;
+}
+
+.slider-title {
+  text-align: center;
+  color: black;
+  font-weight: 300;
+  font-size: 64px;
+  line-height: 64px;
+}
+
+.roses {
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+
+iframe {
+  width: 100%;
+  height: 450px;
+  margin: 75px 0;
 }
